more useful checkCell

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -5,7 +5,15 @@
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="CrosswordJS.js"></script>
+	<style>
+	body{margin:0;}
+	.quiz {}
+	.quiz li {}
+	</style>
 </head>
 <body onload="draw();">
 	<canvas id="stage" height="700px" width="700px"></canvas>
+	<ul class="quiz">
+		
+	</ul>
 </body>
