Added writing questions to document

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -7,13 +7,16 @@
 	<script type="text/javascript" src="CrosswordJS.js"></script>
 	<style>
 	body{margin:0;}
-	.quiz {}
+	canvas, .quiz {float:left;}
 	.quiz li {}
 	</style>
 </head>
 <body onload="draw();">
 	<canvas id="stage" height="700px" width="700px"></canvas>
-	<ul class="quiz">
+	<ul id="AcrossQuestions" class="quiz">
+		
+	</ul>
+	<ul id="DownQuestions" class="quiz">
 		
 	</ul>
 </body>
