--- a/TestIndex.html
+++ b/TestIndex.html
@@ -9,6 +9,7 @@
 	body{margin:0;}
 	canvas, .quiz {float:left;}
 	.quiz li {}
+	.quiz li.active { background:#f2f2f2; }
 	</style>
 </head>
 <body onload="draw();">
