Implemented correctness highlighting --testing needed

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -9,7 +9,7 @@
 	body{margin:0;}
 	canvas, .quiz {float:left;}
 	.quiz li {}
-	.quiz li.active { background:#f2f2f2; }
+	.quiz li.active { background:#dbdbdb; }
 	</style>
 </head>
 <body onload="draw();">
