Completed questions grey out on the right

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -9,7 +9,10 @@
 	body{margin:0;}
 	canvas, .quiz {float:left;}
 	.quiz li {}
-	.quiz li.active { background:#dbdbdb; }
+	.quiz li.active { background:lightgrey; }
+	.quiz li span {padding-left:1em;}
+	.quiz li.correct {color:gray;}
+	.quiz ul {list-style-type: none;}
 	</style>
 </head>
 <body onload="draw();">
