Added minimum view for canvas

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -30,6 +30,7 @@
 </head>
 <body onload="draw();">
 	<canvas id="stage" height="700px" width="700px"></canvas>
+	<button onclick="edit(event)">Edit</button>
 	<ul id="AcrossQuestions" class="quiz">
 		
 	</ul>
