Added minimum view for canvas init

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -29,7 +29,8 @@
 	</style>
 </head>
 <body onload="draw();">
-	<canvas id="stage" height="700px" width="700px"></canvas>
+	<div id="game">
+	</div>
 	<button onclick="edit(event)">Edit</button>
 	<ul id="AcrossQuestions" class="quiz">
 		
