Using more explicit function names for init

--- a/TestIndex.html
+++ b/TestIndex.html
@@ -28,7 +28,7 @@
 	.quiz ul { list-style-type: none; }
 	</style>
 </head>
-<body onload="draw();">
+<body onload="init();">
 	<div id="game">
 	</div>
 	<button onclick="edit(event)">Edit</button>
